--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
 
         <footer>
-            Created by <strong>goshtrk</strong> | &copy; 2026
+             &copy; 2026 goshtrk
         </footer>
     </div>
 
@@ -243,3 +243,4 @@
     </script>
 </body>
 </html>
+
