Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
             card.addEventListener('click', async (e) => {
                 e.preventDefault();
-                const targetUrl = `./${config.id}/index.html`;
+                const targetUrl = `./${config.id}/`;
 
                 card.classList.add('checking');
                 card.innerHTML = `Checking...`;
@@ -243,4 +243,5 @@
     </script>
 </body>
 </html>
+
 
