--- a/best24/index.html
+++ b/best24/index.html
@@ -157,6 +157,7 @@
       box-shadow: 0 10px 30px rgba(0,0,0,0.7);
       border-radius: 12px;
       overflow: hidden;
+      overflow-y: auto;
     }
 
     /* ヘッダー */
@@ -177,10 +178,9 @@
       filter: drop-shadow(0 0 5px rgba(193, 166, 255, 0.6));
     }
 
-    /* メインコンテンツ（ここだけスクロール） */
+    /* メインコンテンツ */
     .admin-body {
       padding: 20px;
-      overflow-y: auto;
       flex: 1;
     }
 
