Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 
         <div class="resources">
             <p style="font-size: 0.9rem; color: var(--text-dim); margin-bottom: 0.5rem;">Resources & Documents</p>
-            <a href="#" class="resource-link">📄 Manual (Google Docs)</a>
-            <a href="#" class="resource-link">📁 Assets & CSV Package (Google Drive)</a>
+            <a href="https://docs.google.com/document/d/1RlDq8lRpm5sGXtoUZ5nCnYHeODzjCbJ3I9n7bIjzRxI/edit?usp=sharing" class="resource-link">📄 Manual (Google Docs)</a>
+            <a href="https://drive.google.com/drive/folders/1UFpUOA49rEq8ikSJFJKBUyyISzbWOK0Z?usp=sharing" class="resource-link">📁 Sample CSV Package (Google Drive)</a>
         </div>
 
         <footer>
@@ -243,5 +243,6 @@
     </script>
 </body>
 </html>
+
 
 
