--- a/best16/index.html
+++ b/best16/index.html
@@ -900,8 +900,8 @@
       const watermark = document.getElementById('watermark');
       const msg = document.getElementById('pwMsg');
       
-      // パスワードを 'urbanjungle' に設定した場合
-      if (pw === 'urbanjungle') {
+      // パスワードを 'sixteen' に設定した場合
+      if (pw === 'sixteen') {
         watermark.style.display = 'none';
         msg.style.color = '#46ff52';
         msg.textContent = "透かしを解除しました。";
@@ -914,4 +914,5 @@
     }
   </script>
 </body>
+
 </html>
